<resources>
    <string name="app_name">MyApplication</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_getaway">欢迎来到点餐Demo</string>
    <string name="goListButton">店铺列表</string>
    <string name="call">拨打电话</string>
    <string name="msg">发送短信</string>
    <string name="dataTran">数据传递</string>
    <string name="weChatHome">主页导航</string>
</resources>
